# ahv-defender

./: .gitignore  CMakeLists.txt  README.md
deploy/docker/lookup-server/: Dockerfile
deploy/kubernetes/lookup-server/: deployment.yaml
deploy/lookup-server/: deployment.yaml  forward-service-to-localhost.sh  service.yaml
deploy/web-server/: Dockerfile  deployment.yaml  service.yaml
deploy/web-server/web/: index.js  package.json
deploy/web-server/web/static/: ahvs.html  email_filtered.html  email_sent.html  index.html
email-analyzer/: email-analyzer.cc
lib/: AHVCache_Base.hpp  AHVCache_HashMap.hpp  AHVCache_Radix.hpp  AHVCache_RadixBucket.hpp  AHVDatabaseClient.hpp  AHVDatabaseServiceImpl.hpp  AHVDiskDatabase.hpp  AHVExtractor.hpp  AHVExtractorParanoid.hpp  AHVExtractorStandard.hpp  AHVExtractorThorough.hpp  AHVStore_File.hpp  AHVUtil.hpp  BCryptHasher.hpp  DiskRecord.hpp
lookup-server/: cli.cc  lookup-server.cc
protos/: ahvdefender.proto
scripts/: email-analyzer.sh  lookup-server.sh  simple-test.sh
scripts/testdata/: ahv-list.txt  ea-test-paranoid.txt  ea-test-standard.txt  ea-test-thorough.txt
tools/: ahv-gen.cc  db-build.cc  db-gen-fake.cc  db-gen.cc
web/: .gitignore  index.js  package-lock.json
web/static/: my.css
